Fixed the overlap message on NAT form, last step.

--- a/css/tna-forms.scss
+++ b/css/tna-forms.scss
@@ -14,6 +14,9 @@ legend {
   max-width: 92%;
   margin: 0 auto;
   margin-bottom: 1.5em !important;
+  #groupErrorPlacement {
+    MARGIN-TOP:20px;
+  }
   label {
     width: 100% !important;
     margin-right: 0 !important;
@@ -212,10 +215,7 @@ legend {
 
 #preferred-contact-error {
   position: absolute;
-  margin-top: -60px;
-}
-#contact_email {
-  margin-top: 40px;
+  margin-top: 32px;
 }
 .form-data {
   ul {
